# ComfyUI-UniRig

./: README.md  __init__.py  comfy-env-root.toml  index.html  install.py  prestartup_script.py  pyproject.toml  requirements.txt
main/: index.html
nodes/: comfy-env.toml  mesh_io.py  mia_auto_rig.py  mia_blender_worker.py  mia_inference.py  skeleton_extraction.py  skinning.py
unirig_utils/: install_blender_addon.py
utils/: __init__.py
