[project]
name = "comfyui-unirig"
description = "Comfy3D-maintained UniRig fork without comfy-env/pixi isolation; dependencies are installed directly in the Comfy3D Docker environment. Automatic skeleton extraction for ComfyUI using UniRig (SIGGRAPH 2025)."
version = "1.6.6-comfy3d.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/michaelgold/ComfyUI-UniRig"
Upstream = "https://github.com/PozzettiAndrea/ComfyUI-UniRig"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "UniRig"
Icon = "https://raw.githubusercontent.com/michaelgold/ComfyUI-UniRig/main/assets/icon.png"
